# ChangeLog for media-libs/mesa
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.231 2009/09/19 15:13:58 scarabeus Exp $

  19 Sep 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -mesa-6.5.2-r1.ebuild, -mesa-7.0.3.ebuild:
  Cleanup. Removal of old xorg versions.

*mesa-7.5.1 (04 Sep 2009)

  04 Sep 2009; Rémi Cardona <remi@gentoo.org> +mesa-7.5.1.ebuild:
  bump to 7.5.1

  26 Aug 2009; Tomáš Chvátal <scarabeus@gentoo.org> mesa-7.3-r1.ebuild:
  Stabilise 7.3-r1 on alpha which should be the target (not the 7.4.2). They
  are mostly 1:1.

*mesa-7.5-r3 (26 Aug 2009)

  26 Aug 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/7.4-fix-parallel-make.patch, -mesa-7.4.2.ebuild,
  -mesa-7.5-r1.ebuild, +mesa-7.5-r3.ebuild:
  Revbump with all patches from upstream availible up to now. Remove old.

  22 Jul 2009; Rémi Cardona <remi@gentoo.org> mesa-7.5-r2.ebuild:
  use mirror://gentoo/ instead of gentooexperimental.org

  22 Jul 2009; Tomáš Chvátal <scarabeus@gentoo.org> mesa-7.5-r2.ebuild:
  Disable the gallium, it somewhere in the process changed to
  enabled-by-default

*mesa-7.5-r2 (22 Jul 2009)

  22 Jul 2009; Tomáš Chvátal <scarabeus@gentoo.org> +mesa-7.5-r2.ebuild:
  Revision bump for applied patches from upstream. Per bug #278630.

  22 Jul 2009; Tomáš Chvátal <scarabeus@gentoo.org> files/lib/libGL.la,
  files/lib/libGLU.la:
  Update the .la files per bug #267580. Hopefully it will fix at least some
  issues.

  22 Jul 2009; Tomáš Chvátal <scarabeus@gentoo.org> -mesa-7.5.ebuild,
  mesa-7.5-r1.ebuild:
  Remove sparc asm checks. As per bug #237648. Reason in comment 13.

  21 Jul 2009; Rémi Cardona <remi@gentoo.org> mesa-7.5-r1.ebuild:
  it's not an ebuild's job to add -g to CFLAGS (backport from the x11
  overlay)

*mesa-7.5-r1 (21 Jul 2009)

  21 Jul 2009; Tomáš Chvátal <scarabeus@gentoo.org> +mesa-7.5-r1.ebuild: