@@ -7,10 +7,10 @@ DIST MesaLib-7.5.tar.bz2 4402222 RMD160 63f18e4c801d9a87961ef478cb056980c38c2720
 DIST mesa-7.3-gentoo-patches-01.tar.bz2 34342 RMD160 547e3d1e8a72cd7df13bf699c181a5f8d36bff33 SHA1 51310d802ad1ee8b660fc7cf77c37b5478f3794a SHA256 e3d27046f73b6fc3d89e06fdfce9d065fa79705f59950b65350fa55bd539e56a
 DIST mesa-7.5-gentoo-patches-01.tar.bz2 2257 RMD160 1a3325e1548e290dd06a6663b9f59405be8f4529 SHA1 5c4f83622593d1d8c5d275e31d74a7896805d918 SHA256 9e21a1a225292a21436569f010600e87e39561ae945072905dacf5add158d2cc
 DIST mesa-7.5-gentoo-patches-02.tar.bz2 32508 RMD160 114a243b3f3b2b76e9924ffde36af93890c68a3a SHA1 498890941840017e3c7a4f93341b85b373da5e53 SHA256 847a8e388741e9d30c181113be55e2ae845251aff735b6c3ec8be2aa8322e3d4
-EBUILD mesa-7.3-r1.ebuild 7240 RMD160 8a41f86ab5d2344a4497481170940bb0041c33eb SHA1 e3114735233b0b9972620ed0dbdd81117a81fa05 SHA256 6977c092aa93e8fbfa90d49ace3417744bda47833f016180853540868cb52486
-EBUILD mesa-7.4.4.ebuild 7845 RMD160 2b500aab0c90058ea8326b226dbd6c596a52f0b9 SHA1 d56a2ac6dde4b35d64d72d0b10603e6f6fbe5e51 SHA256 f5ad805efd41b46776b8e0549da303fbd0bf47449eaec8e79c57a070389c0a78
-EBUILD mesa-7.5-r2.ebuild 7838 RMD160 7ce3fec2715f8e92eb55c853e09e30581bd2eff4 SHA1 0c0aadaa470ca08908ce9ade97dfcbdc2523c90a SHA256 cf75501b906f4c1d47d8abb66325915c802a6bd02aa325cce0c2375ed7d4b75f
-EBUILD mesa-7.5-r3.ebuild 7838 RMD160 0d311ea7a6d6578f8217a5565d09a4b6c5e62df9 SHA1 46980b47b8612e8f133b4fc8f14fac3a0035a1c3 SHA256 5828ed80289c5ff191754f1009b2e7757013d6bb51c7040dab3bd220dc4a8fee
-EBUILD mesa-7.5.1.ebuild 7859 RMD160 098eb694eec9cf69ae7490593ee432519f2e061e SHA1 e648643214ca11f419688bfc7e519e4617b87fa9 SHA256 93c755e4b8b617a2498990422edc6b497ceaf178208f9513c063156f03038e96
-MISC ChangeLog 41968 RMD160 f8c3d79d69e164fc067f5e9ebc91ddcba33817a1 SHA1 6b25c50bd8e44a6899724d4631e0d44e4a08d18e SHA256 2439ba3679eb74e35951752cc1a033f0a922cb7b7dc36f5e6bd2a8717f812e4b
+EBUILD mesa-7.3-r1.ebuild 7201 RMD160 e6cab33ecf25a465ff16e1905a55e1724dbb8dc7 SHA1 da20f865b9535c858a840b24fa003d174aa61c2c SHA256 b5d397bfa10bef3d0beb3c9d4711f2370f660cae447c4b34330b59fb1b5ac867
+EBUILD mesa-7.4.4.ebuild 7812 RMD160 df17ab6e6cd836367d3fc571372f6df2a709cbcf SHA1 4be255993b2f311fcc73329febddcd7831055704 SHA256 def04b41ee3dab328a988b4ba282f0f34cd07bc7581112b69a1b523032567af0
+EBUILD mesa-7.5-r2.ebuild 7800 RMD160 6421e23a2a5e773232607fec329a884f49b9580b SHA1 e02a20374ff8dbf166d8feacc7abd7383fe7281a SHA256 dc54061bb5c0b374a46acd986257043b1faf11a879a21f615513fe2196a032fc
+EBUILD mesa-7.5-r3.ebuild 7800 RMD160 859e85f493e2939d75d429ad21aec45b99929786 SHA1 4febe1da0102ee5454491abe1ad45f5fcfb71476 SHA256 8a3c71bc288061457ffc42b8a528d7e52d61dde51687597b3bc5661f6d21a923
+EBUILD mesa-7.5.1.ebuild 7826 RMD160 f72e9d0089da9787d5b54ce16bb752d67aa93a64 SHA1 af718e807c5ccd73068f9712504e2d9a4d5817cd SHA256 016ba469f31f4d8f3955f6153ac5edebd86cc4c10d422d0fea2785e7e3bc0723
+MISC ChangeLog 42233 RMD160 93fdc97e798101bbe67ca613e85fa5bd2223b065 SHA1 730e9aeea3c38980787d6a761f68271dda2ae7ec SHA256 e30a25e30844a3c808e1d7625bf920e477cdde7b22dfff438d796cd17c5e1989
 MISC metadata.xml 251 RMD160 e6e718c1f8c8ab33331fcdc2ed16dc7da35d04aa SHA1 a753e5190a6008a77db021b70d5962cbc2e9e488 SHA256 689bc8ac5839e4eb6173899024bf1f6169a5d3f3a1e82e4cdd80011e3e43a8de
